--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./reset.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header class="header">
@@ -112,7 +112,7 @@
           <ul class="whatwedo-list">
             <li class="whatwedo-item">
               <img
-                src="./img/projects10.webp"
+                src="./projects10.webp"
                 height="294"
                 width="370"
                 alt="Як людина вводить код"
@@ -121,7 +121,7 @@
             </li>
             <li class="whatwedo-item">
               <img
-                src="./img/projects11.webp"
+                src="./projects11.webp"
                 height="294"
                 width="370"
                 alt="Людина друкує"
@@ -130,7 +130,7 @@
             </li>
             <li class="whatwedo-item">
               <img
-                src="./img/9999999999999.webp"
+                src="./9999999999999.webp"
                 height="294"
                 width="370"
                 alt="Людина малює"
@@ -148,7 +148,7 @@
             <li class="team-item">
               <article class="team-article">
                 <img
-                  src="./img/team1.webp"
+                  src="./team1.webp"
                   height="220"
                   width="280"
                   alt="Чоловік з комп'ютером"
@@ -161,7 +161,7 @@
             <li class="team-item">
               <article class="team-article">
                 <img
-                  src="./img/team2.webp"
+                  src="./team2.webp"
                   height="220"
                   width="280"
                   alt="Жінка"
@@ -174,7 +174,7 @@
             <li class="team-item">
               <article class="team-article">
                 <img
-                  src="./img/team3.webp"
+                  src="./team3.webp"
                   height="220"
                   width="280"
                   alt="Чоловік"
@@ -187,7 +187,7 @@
             <li class="team-item">
               <article class="team-article">
                 <img
-                  src="./img/team4.webp"
+                  src="./team4.webp"
                   height="220"
                   width="280"
                   alt="Чоловік в окулярах"
