--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/portfolio.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./portfolio.css" />
   </head>
   <body>
     <header class="header">
@@ -84,7 +84,7 @@
             <li class="projects-item">
               <article class="projects-article">
                 <img
-                  src="./img/projects1.png"
+                  src="./projects1.png"
                   alt="Відкритий сайт на ноутбуці"
                   class="projects-img"
                 />
@@ -95,7 +95,7 @@
             <li class="projects-item">
               <article class="projects-article">
                 <img
-                  src="./img/projects2.png"
+                  src="./projects2.png"
                   alt="Фото баскетболістів"
                   class="projects-img"
                 />
@@ -106,7 +106,7 @@
             <li class="projects-item">
               <article class="projects-article">
                 <img
-                  src="./img/projects3.png"
+                  src="./projects3.png"
                   alt="Лого ресторану"
                   class="projects-img"
                 />
@@ -117,7 +117,7 @@
             <li class="projects-item">
               <article class="projects-article">
                 <img
-                  src="./img/projects4.png"
+                  src="./projects4.png"
                   alt="Чорні навушники"
                   class="projects-img"
                 />
@@ -128,7 +128,7 @@
             <li class="projects-item">
               <article class="projects-article">
                 <img
-                  src="./img/projects5.png"
+                  src="./projects5.png"
                   alt="Товсті книги"
                   class="projects-img"
                 />
@@ -139,7 +139,7 @@
             <li class="projects-item">
               <article class="projects-article">
                 <img
-                  src="./img/projects6.png"
+                  src="./projects6.png"
                   alt="Сайт на моніторі"
                   class="projects-img"
                 />
@@ -150,7 +150,7 @@
             <li class="projects-item">
               <article class="projects-article">
                 <img
-                  src="./img/projects7.png"
+                  src="./projects7.png"
                   alt="Білий журнал"
                   class="projects-img"
                 />
@@ -161,7 +161,7 @@
             <li class="projects-item">
               <article class="projects-article">
                 <img
-                  src="./img/projects8.png"
+                  src="./projects8.png"
                   alt="Білий брелок"
                   class="projects-img"
                 />
@@ -172,7 +172,7 @@
             <li class="projects-item">
               <article class="projects-article">
                 <img
-                  src="./img/projects9.png"
+                  src="./projects9.png"
                   alt="Людина пише на ноутбуці"
                   class="projects-img"
                 />
